VPC.tf

resource "aws_vpc" "DEV-VPC" {
  cidr_block                       = "10.0.0.0/16"
  instance_tenancy                 = "default"
  tags = {
    Name    = "DEV-VPC"
   }
}
